dati-semantic-schema-editor/deployment.yaml
---
#
# Deployment for the Dati Semantic Schema Editor
#   see: https://github.com/teamdigitale/dati-semantic-schema-editor
#
# The configuration is provided via a ConfigMap (configmap-schema-editor)
#   where the /usr/share/nginx/html/config.js file is overridden
#   with the ConfigMap content.
#
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dati-semantic-schema-editor
  name: dati-semantic-schema-editor
  namespace: ndc-dev
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: dati-semantic-schema-editor
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: dati-semantic-schema-editor
      name: dati-semantic-schema-editor
    spec:
      volumes:
        - name: config-volume
          configMap:
            name: configmap-schema-editor
            items:
            - key: config.js
              path: config.js
      containers:
        - image: ghcr.io/teamdigitale/dati-semantic-schema-editor:0.1.2
          imagePullPolicy: Always
          name: dati-semantic-schema-editor
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          volumeMounts:
            - name: config-volume
              mountPath: /usr/share/nginx/html/config.js
              subPath: config.js
          #
          # This is a static nginx server, so it
          #   does not need much resources.
          #
          resources:
            limits:
              cpu: 500m
              memory: 1024Mi
            requests:
              cpu: 250m
              memory: 512Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: { }
      terminationGracePeriodSeconds: 75
