dati-semantic-schema-editor/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: dati-semantic-schema-editor
  namespace: ndc-dev
  labels:
    application: dati-semantic-schema-editor
spec:
  host: schema-editor-ndc-dev.apps.cloudpub.testedev.istat.it
  to:
    kind: Service
    name: dati-semantic-schema-editor
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
